<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".GetDataActivity" >

    
    
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90" >

        
        
        <TextView
            android:id="@+id/refTex3"
            android:layout_width="30dp"
            android:layout_height="70dp" 
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tVPrefMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@+id/refTex3"
            android:layout_centerVertical="true"
            android:text="@string/pref_mode"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tVLocName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tVPrefMode"
            android:layout_alignLeft="@+id/tVPrefMode"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/refTex3"
            android:text="@string/loc_name"
            android:textSize="15sp" />
        
        <TextView 
            android:id="@+id/refTex2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="ModeLoc"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/eTLocName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tVLocName"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/refTex3"
            android:padding="5dp"
            android:hint="@string/hint1"
            android:background="@android:color/white"
            android:ems="10" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/refTex3"
            android:layout_alignTop="@+id/tVPrefMode" >

            <RadioButton
                android:id="@+id/rNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rB1" />

            <RadioButton
                android:id="@+id/rSilent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rB2" />

            <RadioButton
                android:id="@+id/rVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rB3" />
        </RadioGroup>
        
        <TextView
            android:id="@+id/refTex4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/radioGroup1"/>
        
        <TextView
            android:id="@+id/tVRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refTex4"
            android:layout_alignLeft="@+id/tVPrefMode"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/refTex3"
            android:text="@string/radius"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/eTradius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tVRadius"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/refTex3"
            android:padding="5dp"
            android:text="@string/default_radius"
            android:inputType="number"
            android:background="@android:color/white"
            android:ems="4" />
        
        <TextView
            android:id="@+id/tVm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/eTradius"
            android:layout_below="@+id/refTex4"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/m"
            android:textSize="15sp" />
        

    </RelativeLayout>


        <Button
            android:id="@+id/bSaveMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_margin="20dp"
            android:text="@string/save_button" />


</LinearLayout>